dropshot/tests/fail/bad_endpoint3.stderr
error[E0277]: the trait bound `String: Extractor<'_>` is not satisfied
  --> $DIR/bad_endpoint3.rs:17:12
   |
11 | / #[endpoint {
12 | |     method = GET,
13 | |     path = "/test",
14 | | }]
   | |__- required by this bound in `need_extractor`
...
17 |       param: String,
   |              ^^^^^^
   |              |
   |              the trait `Extractor<'_>` is not implemented for `String`
   |              required by a bound in this

error[E0277]: the trait bound `for<'r> for<'_> fn(&RequestContext<()>, String) -> impl Future {<impl From<bad_endpoint> for ApiEndpoint<<&RequestContext<()> as RequestContextArgument>::Context>>::from::bad_endpoint}: dropshot::handler::HttpHandlerFunc<'r, _, _, _>` is not satisfied
  --> $DIR/bad_endpoint3.rs:15:10
   |
15 | async fn bad_endpoint(
   |          ^^^^^^^^^^^^ the trait `for<'r> dropshot::handler::HttpHandlerFunc<'r, _, _, _>` is not implemented for `for<'_> fn(&RequestContext<()>, String) -> impl Future {<impl From<bad_endpoint> for ApiEndpoint<<&RequestContext<()> as RequestContextArgument>::Context>>::from::bad_endpoint}`
   |
  ::: $WORKSPACE/dropshot/src/api_description.rs
   |
   |             for <'r> Extractor<'r> + 'static,
   |                                      ------- required by this bound in `ApiEndpoint::<Context>::new`
